Change country to state for globalInstructions when usOn. Remove worldList on critical for us. Pin chart help-tip to top right. Updated server express app syntax with new versions, updated latest npm packages, updated package.json version 3.0.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -628,6 +628,10 @@ body{
 .help-tip-stats p:after{
     height: 0;
 }
+.help-tip-chart{
+    top: -10px!important;;
+    right: -10px!important;
+}
 .flex-stat{
     display: -webkit-box;;
     display: -ms-flexbox;;
