--- a/public/css/maintenance.css
+++ b/public/css/maintenance.css
@@ -18,6 +18,7 @@ html, body{
     margin:0;
     padding:0;
     font-family: 'Gill Sans', sans-serif;
+    -ms-touch-action:none;touch-action:none;
 }
 html{
     background-color: #282828;
