--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -285,7 +285,6 @@ body{
     z-index: 12;
     box-shadow: 0px 0px 2px 0px black;
     -ms-touch-action:none;touch-action:none;
-    pointer-events: none;
 }
 .light #header{
     background-color:#fff;
@@ -1686,6 +1685,9 @@ svg{
     margin:5px;
     opacity: 0.9;
     text-align: center;
+}
+.about-flex-100{
+    width:calc(100% - 10px);
 }
 .about-flex-col, .about-flex-title{
     display:-webkit-box;
